--- a/_posts/2012-04-12-git-tfs_fr.textile
+++ b/_posts/2012-04-12-git-tfs_fr.textile
@@ -28,9 +28,18 @@ h4. 2.1. Récupération des commits du tronc
 
 h4. 2.2. Commiter sur le dépot tfs
 
+h5. 2.2.1 Commiter manuellement
 @git tfs ct@
 
 ! Toujours faire une fetch & rebase (ou merge) avant de commiter (sinon risque d'écrasement de fichier communs modifiés)
+
+h5. 2.2.2 Commiter automatiquement les commits Git locaux
+@git tfs rcheckin@
+
+Note : Lors de l'utilisation de rcheckin, il est possible lors d'un commit Git local, d'ajouter des références aux éléments de travail pour les associer ou les clore ( lors du commit sur le serveur TFS).
+Voici la syntaxe :
+@git-tfs-work-item: <id> associate@ 
+@git-tfs-work-item: <id> resolve@
 
 h3. 3. Gestion d'une branche
 
@@ -72,10 +81,6 @@ h4. 3.2. Récupération des commits d'une branche
 h4. 3.3. Commiter sur une branche
 
 @git tfs ct -i maBrancheTfs@
-
-Note : Lors d'un commit local, on peut ajouter des références aux éléments de travail pour les associer ou les clore (lors de l'utilisation de rcheckin). Voici la syntaxe :
-@git-tfs-work-item: <id> associate@ 
-@git-tfs-work-item: <id> resolve@
 
 notextile. <!--
 Annexe :
