--- a/_posts/2012-06-01-git-tfs_en.textile
+++ b/_posts/2012-06-01-git-tfs_en.textile
@@ -15,7 +15,7 @@ h3. 1. Clone main branch of the TFS repository
 * With the entire historic of the repository (long but advised...)
 @git tfs clone http://myTfsServer:8080/tfs/TfsRepository $/MyProject/TruncName .@
 
-* En ne récupérerant que le dernier commit du dépot
+* From only the last commit of the repository
 @git tfs quick-clone http://myTfsServer:8080/tfs/TfsRepository $/MyProject/TruncName .@
 
 At the Visual Studio first opening, choose to deconnect temporary the solution from the server (otherwise it will modify some files)
